--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,8 +105,7 @@ input[type="checkbox"] {
 }
 
 .reset {
-    background-color: var(--red);
-    color: white;
+    color: var(--black);
 }
 
 .totalScore {
